<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".jackpot">


    <EditText
        android:id="@+id/betText"
        android:layout_width="253dp"
        android:layout_height="73dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="95dp"
        android:layout_marginTop="179dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="352dp"

        android:ems="10"
        android:hint="@string/enter_bet"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:textColorHint="#FFFFFF" />

    <EditText
        android:id="@+id/enterName"
        android:layout_width="253dp"
        android:layout_height="73dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="91dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="457dp"

        android:ems="10"
        android:hint="Enter name:"
        android:importantForAutofill="no"
        android:inputType="textShortMessage"
        android:textColorHint="#FFFFFF" />

    <EditText
        android:id="@+id/guessNumText"
        android:layout_width="253dp"
        android:layout_height="73dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="93dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="232dp"
        android:ems="10"
        android:hint="@string/guess_number"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:textColorHint="#FFFFFF" />

    <Button
        android:id="@+id/jackpotButton"
        android:layout_width="173dp"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="131dp"
        android:layout_marginTop="447dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="91dp"
        android:background="@color/buttonColor1"
        android:fontFamily="@font/bungee_shade"
        android:text="@string/jackpot"
        android:textSize="24sp" />

</RelativeLayout>